src/views/HomeView/HomeView.module.css
.main {
  padding: 0;
  margin: 0;
  height: auto;
  width: 100vw;
}

.header {
  background-color: rgba(3 0 24 / 0.83);
  display: flex;
  justify-content: end;
  padding: 2rem;
  @media screen and (min-width: 768px) {
    justify-content: center;
  }
}

.nav {
  padding: 0;
  align-items: center;
  display: flex;
  justify-content: space-between;
  width: 100%;
  @media screen and (min-width: 768px) {
    padding: 2rem;
    width: 1050px;
  }
}

.nav > h1 > a {
  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
  font-size: large;
  @media screen and (min-width: 768px) {
    font-size: xx-large;
  }
}

.nav > h1 a {
  text-decoration: none;
}

.nav ul {
  display: flex;
  max-width: 1050px;
  list-style: none;
  padding: 0;
  margin: 0;
  column-gap: 1rem;
  @media screen and (min-width: 768px) {
    column-gap: 2rem;
  }
}

.nav ul li {
  padding: 0;
  margin: 0;
  font-size: small;
  display: flex;
  width: fit-content;
  @media screen and (min-width: 768px) {
    font-size: medium;
  }
}
.nav ul li a {
  padding: 0;
  margin: 0;
  text-decoration: none;

  transition: text-decoration 0.5s, color 0.5s; /* Adding color transition */
}

.nav ul li a:hover {
  text-decoration: underline; /* Underline on hover */
  color: #d53b2b; /* Change text color on hover */
}

.section {
  width: 100%;
  display: flex;
  justify-content: start;
  background-color: rgba(3 0 24 / 0.83);
  @media screen and (min-width: 768px) {
    justify-content: center;
  }
}

.hero {
  padding: 2rem;
  display: flex;
  flex-direction: column-reverse;
  row-gap: 4rem;
  align-items: center;
  column-gap: 4rem;
  max-width: 1050px;
  @media screen and (min-width: 768px) {
    flex-direction: row;
  }
}

.hero h1 {
  color: lab(100 0 -0.03 / 0.78);
  font-size: x-large;
  @media screen and (min-width: 768px) {
    font-size: xx-large;
  }
}

.heroImage {
  object-fit: contain;
  height: auto;
  width: 100%;
  @media screen and (min-width: 768px) {
    width: 54%;
  }
}

.about {
  max-width: 1050px;
  padding: 2rem;
}
.about {
  display: flex;
  flex-direction: column;
}
.about p {
  margin-bottom: 2rem;
}
.about h2 {
  margin-bottom: 2rem;
}

.contactUs {
  max-width: 1050px;
  padding: 2rem;
  @media screen and (min-width: 768px) {
    width: 1050px;
    flex-direction: row;
    justify-content: start;
  }
}

.footer {
}

.footerSecondary {
  display: flex;
  justify-content: start;
  @media screen and (min-width: 768px) {
    justify-content: center;
  }
}

.footerNav {
  max-width: 1050px;
  padding: 2rem;
  @media screen and (min-width: 768px) {
    width: 1050px;
  }
}

.footerNav ul {
  list-style: none;
  display: flex;
  flex-direction: column;
  row-gap: 12px;
}

.footerNav ul li {
  padding: 0;
  margin: 0;
}

.footerNav ul li a {
}

.footerPrimary {
  display: flex;
  justify-content: start;
  @media screen and (min-width: 768px) {
    justify-content: center;
  }
}

.footerPrimary div {
  display: flex;
  padding: 2rem;
  align-items: center;
  max-width: 1050px;
  font-size: small;
  @media screen and (min-width: 768px) {
    width: 1050px;
    justify-content: space-between;
  }
}

.footerPrimary div a {
  text-decoration: underline;
}

